--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,5 @@
 FROM mcr.microsoft.com/playwright/python:v1.47.0-jammy
 
-
-
 WORKDIR /app
 
 COPY requirements.txt /app/requirements.txt
@@ -9,11 +7,8 @@ RUN pip install --no-cache-dir -r /app/requirements.txt
 
 COPY . /app
 
+# Install browser binaries
 RUN python -m playwright install chromium
 
-
 ENV PYTHONUNBUFFERED=1
-EXPOSE 8000
-
-
 CMD ["bash", "-lc", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
